added grunt qunit-junit package

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"grunt-legacy-util": "^0.2.0",
 		"grunt-patch-wordpress": "~1.0.0",
 		"grunt-postcss": "~0.7.1",
+		"grunt-qunit-junit": "^0.3.1",
 		"grunt-replace": "~1.0.1",
 		"grunt-rtlcss": "~2.0.1",
 		"grunt-sass": "2.0.0",
