--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "WordPress",
 	"version": "5.0.0",
-	"description": "WordPress is open source software you can use to create a beautiful website, blog, or app.",
+	"description": "WordPress is open source software test fork you can use to create a beautiful website, blog, or app.",
 	"repository": {
 		"type": "svn",
 		"url": "https://develop.svn.wordpress.org/trunk"
