--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"autoprefixer": "^6.5.1",
 		"grunt": "~0.4.5",
 		"grunt-banner": "^0.6.0",
+		"grunt-cli": "~1.2.0",
 		"grunt-contrib-clean": "~1.0.0",
 		"grunt-contrib-compress": "~1.3.0",
 		"grunt-contrib-concat": "~1.0.0",
