--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"grunt-webpack": "^3.0.2",
 		"ink-docstrap": "^1.3.0",
 		"matchdep": "~1.0.0",
+		"phantomjs-prebuilt": "~2.1.1",
 		"webpack": "^3.6.0",
 		"webpack-dev-server": "^2.9.1"
 	}
