--- a/.travis.yml
+++ b/.travis.yml
@@ -105,9 +105,7 @@ before_script:
 - git --version
 - svn --version
 - locale -a
-script:
-- grunt $WP_TRAVISCI
-- ls -lah
+script: grunt $WP_TRAVISCI
 after_script:
 - |
   if [[ "$WP_TEST_REPORTER" == "true" ]]; then
