--- a/.travis.yml
+++ b/.travis.yml
@@ -14,25 +14,25 @@ matrix:
   include:
   - php: 7.2
     env: WP_TRAVISCI=travis:format
-  - php: 7.1
-    env: WP_TRAVISCI=travis:js
-  - php: 7.2
-  - php: 7.1
-  - php: 7.0
-    env: WP_TEST_REPORTER=true
-  - php: 5.6
-  - php: 5.6
-    env: WP_TRAVIS_OBJECT_CACHE=true
-    services: memcached
-  - php: 5.5
-  - php: 5.4
-  - php: 5.3
-    dist: precise
-  - php: 5.2
-    dist: precise
-  - php: nightly
-  allow_failures:
-  - php: nightly
+  # - php: 7.1
+  #   env: WP_TRAVISCI=travis:js
+  # - php: 7.2
+  # - php: 7.1
+  # - php: 7.0
+  #   env: WP_TEST_REPORTER=true
+  # - php: 5.6
+  # - php: 5.6
+  #   env: WP_TRAVIS_OBJECT_CACHE=true
+  #   services: memcached
+  # - php: 5.5
+  # - php: 5.4
+  # - php: 5.3
+  #   dist: precise
+  # - php: 5.2
+  #   dist: precise
+  # - php: nightly
+  # allow_failures:
+  # - php: nightly
 before_install:
 - |
   if [[ "$WP_TRAVISCI" == "travis:phpunit" ]]; then
@@ -109,7 +109,7 @@ before_script:
 - git --version
 - svn --version
 - locale -a
-script: grunt $WP_TRAVISCI
+script: composer format
 after_script:
 - |
   if [[ "$WP_TEST_REPORTER" == "true" ]]; then
