--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ cache:
   apt: true
   directories:
     - node_modules
-    - vendor
-    - $HOME/.composer/cache
 env:
   global:
     - WP_TRAVISCI=travis:phpunit
@@ -92,10 +90,10 @@ before_script:
   fi
 - npm --version
 - node --version
-- nvm install 8.9.3
-- npm install -g grunt-cli
-- npm install
-- npm prune
+# - nvm install 8.9.3
+# - npm install -g grunt-cli
+# - npm install
+# - npm prune
 - mysql --version
 - phpenv versions
 - php --version
@@ -109,7 +107,9 @@ before_script:
 - git --version
 - svn --version
 - locale -a
-script: composer format
+script:
+- composer format
+- ls -lah
 after_script:
 - |
   if [[ "$WP_TEST_REPORTER" == "true" ]]; then
