--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"wp-coding-standards/wpcs": "1.0.0"
 	},
 	"scripts": {
-		"format": "phpcbf",
-		"lint": "phpcs"
+		"format": "phpcbf --standard=phpcs.xml.dist --report-summary --report-source",
+		"lint": "phpcs --standard=phpcs.xml.dist --report-summary --report-source"
 	}
 }
