--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
 env:
   global:
     - WP_TRAVISCI=travis:phpunit
+    - TRAVIS_BUILD_DIR=$HOME/ci
 matrix:
   include:
   - php: 7.2
@@ -109,24 +110,9 @@ before_script:
 - git --version
 - svn --version
 - locale -a
-- |
-  # For PHPCS to function correctly, the checkout can't live in a directory with "build" in it, so move it.
-  if [[ "$WP_TRAVISCI" == "travis:format" ]]; then
-    cd $HOME
-    mv build ci
-    export TRAVIS_BUILD_DIR=/home/travis/ci/WordPress/wordpress-develop
-    cd $TRAVIS_BUILD_DIR
-  fi
 script:
 - grunt $WP_TRAVISCI
 after_script:
-  # Move it back once we're done.
-  if [[ "$WP_TRAVISCI" == "travis:format" ]]; then
-    cd $HOME
-    mv ci build
-    export TRAVIS_BUILD_DIR=/home/travis/build/WordPress/wordpress-develop
-    cd $TRAVIS_BUILD_DIR
-  fi
 - |
   if [[ "$WP_TEST_REPORTER" == "true" ]]; then
     git clone https://github.com/WordPress/phpunit-test-runner.git test-runner
