--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ before_script:
 - node --version
 - nvm install 8.9.3
 - npm install -g grunt-cli
-- npm install
+- npm install --no-bin-links
 - npm prune
 - mysql --version
 - phpenv versions
