--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
 		"grunt-postcss": "~0.9.0",
 		"grunt-replace": "~1.0.1",
 		"grunt-rtlcss": "~2.0.1",
-		"grunt-sass": "~2.0.0",
+		"grunt-sass": "~3.0.2",
 		"grunt-webpack": "^3.1.3",
 		"ink-docstrap": "^1.3.0",
 		"jquery-migrate": "1.4.1",
 		"matchdep": "~2.0.0",
+		"node-sass": "4.11.0",
 		"source-map-loader": "^0.2.4",
 		"uglify-js": "^3.4.9",
 		"uglifyjs-webpack-plugin": "^2.0.1",
