--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
 		"@wordpress/wordcount": "^2.0.3",
 		"backbone": "1.3.3",
 		"element-closest": "^2.0.2",
+		"escodegen": "1.10.0",
+		"esprima": "4.0.0",
+		"estraverse": "4.2.0",
 		"formdata-polyfill": "^3.0.12",
 		"imagesloaded": "3.2.0",
 		"jquery": "1.12.4",
@@ -107,8 +110,10 @@
 		"polyfill-library": "^3.26.0-0",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
+		"rot": "0.1.0",
 		"twemoji": "11.0.0",
 		"underscore": "1.8.3",
+		"zxcvbn": "4.4.2",
 		"whatwg-fetch": "^3.0.0"
 	},
 	"scripts": {
