Build/Test Tools: Instruct Git and Subversion to ignore Composer's `/vendor` directory.
Re-adds changes from [42405] after being reverted by accident in [43309].

Fixes #45770


git-svn-id: https://develop.svn.wordpress.org/trunk@44363 602fd350-edb4-49c9-b593-d223f7449a82

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ wp-tests-config.php
 /tests/phpunit/build
 /wp-cli.local.yml
 /jsdoc
+/vendor
 /src/wp-includes/js
 /src/wp-includes/css/dist
 /src/wp-admin/css/*.min.css
