Build Tools: After [44359], add `src/wp-admin/js` to `.gitignore`.
Props iandunn.
See #44492.

git-svn-id: https://develop.svn.wordpress.org/trunk@44365 602fd350-edb4-49c9-b593-d223f7449a82

--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,13 @@ wp-tests-config.php
 /wp-cli.local.yml
 /jsdoc
 /vendor
-/src/wp-includes/js
-/src/wp-includes/css/dist
 /src/wp-admin/css/*.min.css
 /src/wp-admin/css/*-rtl.css
-/src/wp-includes/css/*.min.css
 /src/wp-admin/css/colors/*/*.css
+/src/wp-admin/js
+/src/wp-includes/js
+/src/wp-includes/css/dist
+/src/wp-includes/css/*.min.css
 
 # Files and folders that get created in wp-content
 /src/wp-content/blogs.dir
