--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -90,6 +90,8 @@
 		(such as calling the low-level translate() function). -->
 	<rule ref="WordPress.WP.I18n">
 		<exclude-pattern>/src/wp-includes/l10n\.php</exclude-pattern>
+		<exclude-pattern>/tests/phpunit/tests/l10n\.php</exclude-pattern>
+		<exclude-pattern>/tests/phpunit/tests/l10n/loadTextdomainJustInTime\.php</exclude-pattern>
 	</rule>
 
 	<rule ref="Generic.Functions.FunctionCallArgumentSpacing">
