--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,13 +14,20 @@ install:
   - npm install grunt-cli -g
   - npm install
 
-
-test_script:
+before_build:
   - node --version
   - npm --version
+
+build_script:
   - cmd: "grunt build"
+
+test: off
+
+deploy: off
 
 notifications:
   - provider: Slack
     incoming_webhook:
       secure: CmhfxrWwgtwzO/kXoZWXRUB/Jh05AQ7DvOhToqtpm6dN1wBDp9+VnNqxldpv34uPd09vuUk4Nu/NQFkIswuZA5NYfIFJIFWqwnZExQFzTBA=
+    on_build_status_changed: true
+    template: Build <{{buildUrl}}|#{{buildNumber}}> (<{{commitUrl}}|{{commitId}}>) of {{repositoryName}}@{{branch}} by {{commitAuthor}} {{status}} in {{duration}}
