--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 language: php
 cache:
   directories:
-    - node_modules
+    - $HOME/.npm
     - vendor
     - $HOME/.composer/cache
 matrix:
