Update Node dependencies to match those of the 4.0 branch.

--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   "author": "The WordPress Contributors",
   "license": "GPLv2 or later",
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-qunit": "~0.4.0",
-    "grunt-contrib-uglify": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compress": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-cssjanus": "~0.2.2",
-    "grunt-sass": "~0.10.0",
-    "grunt-autoprefixer": "~0.7.1",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-qunit": "~0.5.2",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-compress": "~0.10.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-cssjanus": "git://github.com/ocean90/grunt-cssjanus.git#936144c11fdee00427c3ce3cb0f87ee5770149b7",
+    "grunt-sass": "~0.16.0",
+    "grunt-autoprefixer": "~0.8.2",
     "grunt-jsvalidate": "~0.2.2",
     "grunt-contrib-imagemin" : "~0.4.1",
     "grunt-patch-wordpress" : "~0.2.1",
