--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "~0.5.0",
-		"wp-coding-standards/wpcs": "~2.0.0"
+		"wp-coding-standards/wpcs": "~2.0.0",
+		"phpunit/phpunit": "^7"
 	},
 	"scripts": {
 		"format": "phpcbf --standard=phpcs.xml.dist --report-summary --report-source",
-		"lint": "phpcs --standard=phpcs.xml.dist --report-summary --report-source"
+		"lint": "phpcs --standard=phpcs.xml.dist --report-summary --report-source",
+		"unit-tests": "./vendor/bin/phpunit"
 	}
 }
